# Portrait

./: CONTRIBUTING.md  LICENSE  README.md
compliance-patterns/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KNOWN-ISSUES.md  LAUNCH-NOTE.md  LICENSE  MIGRATING-FROM-SOLIDITY.md  README.md  SECURITY.md
compliance-patterns/.github/workflows/: ci.yml
compliance-patterns/_harness/: ci.sh  portrait-ci.sh  release-cut.sh  status.py
compliance-patterns/book/: book.toml
compliance-patterns/book/src/: SUMMARY.md  dagviz-demo.md  environment.md  evidence.md  introduction.md  known-issues.md  launch-note.md  next-steps-covenant-live-deploy.md  next-steps-introspection-enforcement.md  patterns.md  portrait.md  quick-start.md
compliance-patterns/book/src/crates/: kcp-common.md  kcp-ktt-token.md  kcp-paired-attestation.md  kcp-sealed-lineage.md  kcp-transferable-record.md  kcp-vault.md
compliance-patterns/book/src/patterns/: README.md  governance.md  ktt-token.md  paired-attestation.md  pq-anchor.md  sealed-lineage.md  transferable-record.md  vault.md  vesting.md  yield-vault.md
compliance-patterns/book/src/reference/: README.md  attestation.md  custody.md  examples.md  finance.md  governance.md  state.md  vprog.md
compliance-patterns/book/src/wizard/: README.md  composite.md  governance.md  ktt-token.md  paired-attestation.md  pq-anchor.md  sealed-lineage.md  timelock.md  transferable-record.md  vault.md  vesting.md  yield-vault.md
compliance-patterns/crates/kcp-cli/: Cargo.toml
compliance-patterns/crates/kcp-cli/src/: lib.rs  main.rs
compliance-patterns/crates/kcp-cli/tests/: scaffold_composite.rs  scaffold_ktt_token.rs  scaffold_paired_attestation.rs  scaffold_sealed_lineage.rs  scaffold_timelock.rs  scaffold_transferable_record.rs  scaffold_vault.rs
compliance-patterns/crates/kcp-common/: Cargo.toml  README.md
compliance-patterns/crates/kcp-common/examples/: balance.rs  covenant_auditor.rs  multi_step_lineage.rs  node_status.rs  p2sh_roundtrip.rs  pubkey.rs  reserve_covenant_live.rs
compliance-patterns/crates/kcp-common/src/: access.rs  canonical.rs  cryptography.rs  digest.rs  error.rs  lib.rs  p2sh.rs  security.rs  tx.rs  utils.rs  wallet.rs  wrpc.rs
compliance-patterns/crates/kcp-csci/: Cargo.toml
compliance-patterns/crates/kcp-csci/covenant/: csci-intent.sil
compliance-patterns/crates/kcp-csci/src/: binding.rs  error.rs  lib.rs  redeem.rs  state.rs
compliance-patterns/crates/kcp-csci/tests/: csci_smoke.rs
compliance-patterns/crates/kcp-governance/: Cargo.toml
compliance-patterns/crates/kcp-governance/src/: action.rs  error.rs  governor.rs  lib.rs  proposal.rs  vote.rs
compliance-patterns/crates/kcp-ktt-token/: Cargo.toml  README.md
compliance-patterns/crates/kcp-ktt-token/covenant/: README.md  ktt.compiled.json  ktt.script.hex  ktt.sil  ktt_ast.json  ktt_ctor.json
compliance-patterns/crates/kcp-ktt-token/examples/: testnet_evidence.rs
compliance-patterns/crates/kcp-ktt-token/src/: error.rs  lib.rs  payload.rs  state.rs  token.rs  transfer_rules.rs  tx.rs
compliance-patterns/crates/kcp-paired-attestation/: Cargo.toml  README.md
compliance-patterns/crates/kcp-paired-attestation/examples/: onchain_evidence.rs  testnet_evidence.rs
compliance-patterns/crates/kcp-paired-attestation/src/: error.rs  invariants.rs  lib.rs  mate.rs  onchain.rs  payload.rs  record.rs  tx.rs
compliance-patterns/crates/kcp-pq-anchor/: Cargo.toml  README.md
compliance-patterns/crates/kcp-pq-anchor/src/: anchor_script.rs  journal_spec.rs  lib.rs  sigop.rs
compliance-patterns/crates/kcp-pq-anchor/tests/: engine_accept.rs  integration.rs
compliance-patterns/crates/kcp-sealed-lineage/: Cargo.toml  README.md
compliance-patterns/crates/kcp-sealed-lineage/covenant/: README.md  sealed-lineage.compiled.json  sealed-lineage.json  sealed-lineage.script.hex  sealed-lineage.sil  sealed-lineage_ctor.json
compliance-patterns/crates/kcp-sealed-lineage/examples/: auditor_verify.rs  testnet_evidence.rs
compliance-patterns/crates/kcp-sealed-lineage/src/: error.rs  invariants.rs  lib.rs  payload.rs  record.rs  tx.rs
compliance-patterns/crates/kcp-transferable-record/: Cargo.toml  README.md
compliance-patterns/crates/kcp-transferable-record/covenant/: README.md  transferable-record.json  transferable-record.script.hex  transferable-record.sil  transferable-record_ctor.json
compliance-patterns/crates/kcp-transferable-record/examples/: testnet_evidence.rs
compliance-patterns/crates/kcp-transferable-record/src/: error.rs  lib.rs  tx.rs  (+3 more)
compliance-patterns/crates/kcp-vault/: Cargo.toml  README.md
compliance-patterns/crates/kcp-vesting/: Cargo.toml  README.md
compliance-patterns/crates/kcp-yield-vault/: Cargo.toml  README.md
compliance-patterns/crates/kii-solidity-compat/: Cargo.toml  README.md
compliance-patterns/docs/: COMPOSE-SWEEP-FINDINGS.md  COMPOSER-M0-DESIGN.md  CSCI-PROVENANCE.json  ENGRAVER-VALIDATION.md  ENVIRONMENT.md  EVIDENCE.md  FLAGSHIP-DESIGN.md  FLAGSHIP-DOSSIER.md  FRONTIER-COMPLETE.md  INDEX.md  LENS-M0-ENCODING-SPEC.md  MAINNET-ACTIVATION.md  NEXT-STEPS-covenant-live-deploy.md  NEXT-STEPS-introspection-enforcement.md  NEXT-STEPS-pq-anchor.md  PORTRAIT-COMPILER-SLICE.md  PORTRAIT-LENS-SWEEP.md  PORTRAIT-PHASE-A-UNBLOCK.md  PORTRAIT-PROJECTION-SOUNDNESS.md  SDK-CROSSCHECK.md  SOLIDITY-SUBSET-V0.md  TIER3-CROSS-LAYER-BINDING.md  TIER3-DEMO.md
compliance-patterns/examples/afternoon-migration/: Cargo.toml
compliance-patterns/examples/compliance-workflow/: Cargo.toml  README.md
compliance-patterns/examples/csci-demo/: Cargo.toml
compliance-patterns/examples/erc20-to-ktt-wedge/: Cargo.toml  README.md
compliance-patterns/examples/governance-demo/: Cargo.toml  README.md
compliance-patterns/examples/hello-vault/: Cargo.toml  README.md
compliance-patterns/examples/portrait-settlement/: Cargo.toml  PROVENANCE.json  REPRODUCE.md
compliance-patterns/examples/python-onramp/: README.md  kii_onramp.py  p2sh.py  reproduce_settlement.py
compliance-patterns/examples/tier3-demo/: Cargo.toml
portrait/portrait/: Cargo.toml  README.md
(+166 files in other folders)
