[package]
name = "kcp-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DAG-native governance primitives for the kaspa-compliance-patterns library"
keywords = ["kaspa", "covenant", "governance", "multisig"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
