[package]
name = "kcp-vault"
description = "Covenant-locked custody with timelock and multisig spending conditions (vault pattern)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kcp-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

kaspa-wrpc-client = { workspace = true, optional = true }
kaspa-rpc-core = { workspace = true, optional = true }
kaspa-consensus-core = { workspace = true, optional = true }
kaspa-bip32 = { workspace = true, optional = true }
kaspa-addresses = { workspace = true, optional = true }
kaspa-txscript = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
# The example requires a tokio runtime and macros; the workspace only enables
# "sync". We extend the features here for dev/example use only.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Node-facing plumbing: anchor_vault_tx, testnet example.
# Pulls the rusty-kaspa dependency tree (git, branch "toccata").
wrpc = [
    "kcp-common/wrpc",
    "dep:kaspa-wrpc-client",
    "dep:kaspa-rpc-core",
    "dep:kaspa-consensus-core",
    "dep:kaspa-bip32",
    "dep:kaspa-addresses",
    "dep:kaspa-txscript",
    "dep:tokio",
]

[[example]]
name = "testnet_evidence"
required-features = ["wrpc"]

[[example]]
name = "onchain_evidence"
required-features = ["wrpc"]

[[example]]
name = "composite_evidence"
required-features = ["wrpc"]
