[package]
name = "kcp-vesting"
version = "0.1.0"
edition = "2021"
description = "Linear DAA-height vesting schedule — VestingWallet equivalent for the Kaspa BlockDAG"
license = "MIT"
publish = false

[dependencies]
kcp-common = { path = "../kcp-common" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
