[package]
name = "erc20-to-ktt-wedge"
version = "0.1.0"
edition = "2021"
publish = false
# Pre-production, unaudited, testnet-only.
# Demonstrates the Kii Rosetta on-ramp: ERC20-shaped API → KTT on TN10.

[workspace]

[[bin]]
name = "erc20-to-ktt-wedge"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"

[dependencies]
kii-solidity-compat = { path = "../../crates/kii-solidity-compat" }
kcp-ktt-token = { path = "../../crates/kcp-ktt-token", features = ["wrpc"] }
kcp-common = { path = "../../crates/kcp-common", features = ["wrpc"] }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
hex = "0.4"
serde_json = "1"
ureq = { version = "2", features = ["tls", "json"] }
