[package]
name = "tier3-demo"
version = "0.1.0"
edition = "2021"
publish = false
# Pre-production, unaudited, testnet-only.
#
# Demonstrates the Tier 3 cross-layer binding:
#   1. ComplianceToken portrait file → portrait engrave → silverc ok (Covenant L1)
#   2. ComplianceToken portrait file → portrait atelier-build → guest_main.rs (vProg)
#   3. Simulated RISC Zero journal → CovIdBinding → verify KovId + seq advance
#
# The portrait compiler toolchain (silverc) must be in PATH to run the full pipeline.
# The kii-csci-prover workspace produces the real STARK; this demo uses DEV_MODE output.
# See docs/TIER3-DEMO.md for the full pipeline diagram and evidence.

[workspace]

[[bin]]
name = "tier3-demo"
path = "src/main.rs"

[dependencies]
kcp-csci   = { path = "../../crates/kcp-csci" }
hex        = "0.4"
sha2       = "0.10"
